# ggpo-x-multiplatform

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CMakeSources.cmake
src/apps/vectorwar/: vectorwar.cpp
src/cmake/: helper_methods.cmake  properties.cmake
src/include/: ggponet.h  ggponet.h.backup
src/lib/ggpo/: game_input.cpp  input_queue.cpp  log.cpp  main.cpp  platform_unix.h  poll.h  ring_buffer.h  sync.h  timesync.h  types.h
src/lib/ggpo/backends/: p2p.cpp  p2p.h  synctest.cpp
src/lib/ggpo/network/: mingw_socket.cpp  mingw_socket.h  udp.cpp  udp.h  udp_msg.h  udp_proto.cpp
src/src/: Makefile  cmake_install.cmake
